--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "crypto-js": "^4.0.0",
+    "firebase": "^7.13.2",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
+    "vue-cryptojs": "^2.1.4",
     "vue-property-decorator": "^8.4.1"
   },
   "devDependencies": {
