--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   "dependencies": {
     "core-js": "^3.6.4",
     "crypto-js": "^4.0.0",
-    "firebase": "^7.13.2",
+    "firebase": "^7.14.0",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-cryptojs": "^2.1.4",
-    "vue-property-decorator": "^8.4.1"
+    "vue-property-decorator": "^8.4.1",
+    "vuefire": "^2.2.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.26.0",
