--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "online-card-table",
-  "version": "0.1.0",
+  "name": "cardtable",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
